--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import 'aos/dist/aos.css';
 
 /* Custom styles untuk Batik Giriloyo */
 @layer base {
@@ -36,4 +37,36 @@ html {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #b8935f;
+}
+
+/* AOS Animation overrides */
+[data-aos] {
+  pointer-events: none;
+}
+[data-aos].aos-animate {
+  pointer-events: auto;
+}
+
+/* Custom AOS durations */
+[data-aos][data-aos][data-aos-duration='400'],
+body[data-aos-duration='400'] [data-aos] {
+  transition-duration: 400ms;
+}
+[data-aos][data-aos][data-aos-duration='800'],
+body[data-aos-duration='800'] [data-aos] {
+  transition-duration: 800ms;
+}
+[data-aos][data-aos][data-aos-duration='1200'],
+body[data-aos-duration='1200'] [data-aos] {
+  transition-duration: 1200ms;
+}
+
+/* Custom AOS delays */
+[data-aos][data-aos][data-aos-delay='50'],
+body[data-aos-delay='50'] [data-aos] {
+  transition-delay: 0s;
+}
+[data-aos][data-aos][data-aos-delay='50'].aos-animate,
+body[data-aos-delay='50'] [data-aos].aos-animate {
+  transition-delay: 50ms;
 }
